container/grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: my-gitops-app
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: config-volume
          mountPath: "/etc/grafana/grafana.ini"
          subPath: grafana.ini
      volumes:
      - name: config-volume
        configMap:
          name: grafana-config
