container/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      # The port the service will be available on within the cluster
      port: 80
      # The port the Grafana container is listening on
      targetPort: 3000
